--- a/.github/workflows/frontpage.yml
+++ b/.github/workflows/frontpage.yml
@@ -1,18 +1,32 @@
-name: Run frontpage analysis
+name: Run frontpage analysis (KST 06:00 + manual)
 
 on:
-  # GitHub에서 "Run workflow" 버튼 눌러서 수동 실행
+  # 매일 KST 06:00 (UTC 21:00) 자동 실행
+  schedule:
+    - cron: "0 21 * * *"
+
+  # GitHub에서 "Run workflow" 버튼 눌러 수동 실행
   workflow_dispatch:
+    inputs:
+      test_mode:
+        description: "테스트 모드로 실행? (gpt-5-nano 사용, 비용 최소화)"
+        required: false
+        default: "false"
+        type: choice
+        options:
+          - "false"
+          - "true"
 
 jobs:
   run:
     runs-on: ubuntu-latest
 
-    # 여기서 GitHub Secrets → 환경변수로 주입
     env:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
       TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+      # workflow_dispatch면 github.event.inputs.test_mode, 아니면 빈 문자열 → 'false'로 fallback
+      TEST_MODE: ${{ github.event.inputs.test_mode || 'false' }}
 
     steps:
       - name: Checkout repository
@@ -27,6 +41,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Build urls.txt from Naver (today KST)
+        run: |
+          python build_urls_from_naver.py
 
       - name: Run frontpage analysis
         run: |
