--- a/.github/workflows/frontpage.yml
+++ b/.github/workflows/frontpage.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Run News Scraper & Analyzer
         env:
           # 깃허브 Settings > Secrets and variables > Actions에 등록된 키들
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: python main.py
